3893 lvm: incorrect flag handling Reviewed by: Theo Schlossnagle <jesus@omniti.com> Reviewed by: Dan McDonald <danmcd@nexenta.com> Approved by: Dan McDonald <danmcd@nexenta.com>